# net-tui

./: .gitignore  LICENSE  README.md  net-tui.spec  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
net_tui/: __init__.py  __main__.py  cli.py  hosts.py  main.py  networkd.py
net_tui/backends/: dns_resolved.py  nm.py  systemd_networkd.py
net_tui/domain/: models.py
net_tui/screens/: dns.py  hostname.py  hosts.py  interfaces.py  mainmenu.py  previewapply.py
net_tui/services/: __init__.py  apply.py  dns.py  hostname.py  hosts.py  interfaces.py  utils.py
net_tui/tui/: __init__.py  app.py
net_tui/utils/: detect.py  diff.py  files.py  shell.py  validators.py
tests/: test_detect.py  test_hosts.py  test_networkd.py  test_smoke.py
